--- a/index.html
+++ b/index.html
@@ -2,23 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/images/Haven___Hive_logomark_2-removebg-preview.png" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets//imgs/sirz logo png 1 (1).svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Haven and Hive Interiors</title>
+    <title>Sirz: E-commerce, Branding, Digital marketing</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <script>
-      fetch(`https://api.havenandhiveinteriors.com/api/v1/visits`, {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({
-          url: window.location.href,
-          referrer: document.referrer,
-          userAgent: navigator.userAgent,
-        }),
-      })
-    </script>
   </body>
 </html>
